--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <meta name="description" content="Multiplatform Clipboard. Add clips and they will be uploaded on the database. Then you can retrieve them on any of your device."/>
+    <meta name="creator" content="aashishpeepra.ap@gmail.com"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -19,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Multiplatorm Clipboard | Aashish Peepra</title>
   </head>
   <body>
     <noscript>
